--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <section class="barleybreak">
             <div class="barleybreak__desk"></div>
-            <button class="barleybreak__mix">перемешать</button>
+            <button class="barleybreak__btn-mix">перемешать</button>
         </section>
     </div>
 
